# sse2neon

./: .gitignore  SSE2NEON.h
tests/: CMakeLists.txt  Makefile  SSE2NEONTEST.cpp  SSE2NEONTEST.h  aarch64_glibc.cmake  build_cross.sh
